--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>xCharts</title>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
+    <script src="/app/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-auth.js"></script>
+    <script>
+      var config = {
+
+      };
+      firebase.initializeApp(config);
+    </script>
   </head>
   <body>
     <div id="app"></div>
